name:                geodetic
version:             0.2.0
stability:           experimental
synopsis:            geodetic data types and functions
description:         work with geodetic, ECEF and UTM coordinates
homepage:            http://github.com/alios/geodetic
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          alios@alios.org
copyright:           (c) 2014 Markus Barenhoff         
category:            Data, GIS    
build-type:          Simple
tested-with:         GHC==7.8.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/alios/geodetic.git

library
  exposed-modules:     Data.Geodetic
                       Data.Geodetic.Coordinate
                       Data.Geodetic.Elipsoids
                       Data.Geodetic.UTM
                       Data.Geodetic.GreatCircle
                       Data.Geodetic.GeodeticModel

  other-modules:       Data.Geodetic.Helper
  ghc-options:         -Wall -O2
  ghc-prof-options:    -auto-all
                       -prof

  other-extensions:    TemplateHaskell, DeriveDataTypeable  
  build-depends:       base >= 4,
                       hspec,QuickCheck,
                       dimensional-tf

  default-language:    Haskell2010
  hs-source-dirs:      src

test-suite tests
  build-depends:
      base
    , geodetic
    , dimensional-tf
    , hspec ==2.*
    , HUnit
    , QuickCheck
  default-language:
    Haskell2010
  ghc-options:
    -fhpc
    -Wall
  hs-source-dirs:
    src
    test-suite
  main-is:
    Spec.hs
  other-modules:
    Data.Geodetic    
    Data.GeodeticSpec
  type:
       exitcode-stdio-1.0
